--- a/src/css/just-now.css
+++ b/src/css/just-now.css
@@ -4,13 +4,17 @@
 
 */
 
-html,
-body,
 .v100 { min-height: 100vh; }
 
 .pt10 { padding-top: 10rem; }
 
 .mt10 { margin-top: 10rem; }
+
+.btn-block {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
 
 :root {
 
